feat: canvas-grid-controls

--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -51,7 +51,7 @@
   <div class="right-side">
     <div class="expansion-panels">
       <app-design-dimensions *ngIf="showDimensions"></app-design-dimensions>
-      <app-design-grid-view *ngIf="showCanvasGridControls"></app-design-grid-view>
+      <app-design-canvas-grid-controls *ngIf="showCanvasGridControls"></app-design-canvas-grid-controls>
       <app-design-clario-dimensions *ngIf="showClarioDimensions"></app-design-clario-dimensions>
       <app-design-design *ngIf="showDesign"></app-design-design>
       <app-design-modify *ngIf="showModify"></app-design-modify>
