feat: UI adjustments

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -24,7 +24,8 @@
         <p class="lg">Tetria</p>
         <div class="buttons">
           <button class="button button-transparent orange" (click)="goTo('tetria')">Design Your Feature</button>
-          <button class="button button-transparent orange" (click)="goTo('tetria', 'quantity')">Order By Quantity</button>
+          <button class="button button-transparent orange" (click)="goTo('tetria', 'quantity')">Order By
+            Quantity</button>
         </div>
       </div>
     </div>
@@ -37,7 +38,8 @@
         <p class="lg">Clario</p>
         <div class="buttons">
           <button class="button button-transparent orange" (click)="goTo('clario')">Design Your Feature</button>
-          <button class="button button-transparent orange" (click)="goTo('clario', 'quantity')">Order By Quantity</button>
+          <button class="button button-transparent orange" (click)="goTo('clario', 'quantity')">Order By
+            Quantity</button>
         </div>
       </div>
     </div>
@@ -59,14 +61,15 @@
       <div class="content text-center">
         <p class="lg">Hush Blocks</p>
         <div class="buttons">
-          <button class="button button-transparent orange" (click)="goTo('hush-blocks')">Design Your Feature</button>
-          <button class="button button-transparent orange" (click)="goTo('hush-blocks', 'quantity')">Order By Quantity</button>
+          <!-- <button class="button button-transparent orange" (click)="goTo('hush-blocks')">Design Your Feature</button> -->
+          <button class="button button-transparent orange" (click)="goTo('hush-blocks', 'quantity')">Order By
+            Quantity</button>
         </div>
       </div>
     </div>
   </div>
   <div class="col-sm-6">
-    <div class="feature" id="hush-swoon">
+    <!-- <div class="feature" id="hush-swoon">
       <div class="content text-center">
         <p class="lg">Hush Swoon</p>
         <div class="buttons">
@@ -74,19 +77,6 @@
           <button class="button button-transparent orange" (click)="goTo('hush-swoon', 'quantity')">Order By Quantity</button>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
-</div>
-<div class="row features">
-  <!-- <div class="col-sm-6">
-        <div class="feature" id="profile">
-          <div class="content text-center">
-            <p class="lg">Profile</p>
-            <div class="buttons">
-              <button id="profile-button" class="button button-transparent orange" (click)="goTo('profile')">Design Your Feature</button>
-              <button id="profile-button" class="button button-transparent orange" (click)="goTo('profile', 'quantity')">Order By Quantity</button>
-            </div>
-          </div>
-        </div>
-      </div> -->
 </div>
