--- a/src/app/options/options.component.html
+++ b/src/app/options/options.component.html
@@ -22,7 +22,7 @@
     <div class="left-column">
 
       <div *ngIf="showProjectName" id="project-name" class="left-section">
-        <div class="subtitle">Project name</div>
+        <div class="subtitle">Design name</div>
         <div class="inputs">
           <input [(ngModel)]="feature.design_name" type="text" class="name-input square" placeholder="Name" autofocus>
           <a id="load-btn" class="load-btn-fmt" title="load saved designs" (click)="feature.loadDesigns()">
@@ -45,7 +45,8 @@
         <div class="subtitle">Feature selection</div>
         <span appStyledSelect [width]="280">
           <select (change)="seeyondUpdateSelectedFeature($event.target.value)">
-            <option *ngFor="let featureOption of seeyond.seeyond_features | keys" [value]="featureOption.name" [selected]="featureOption.name==this.seeyond.seeyond_feature_type">{{featureOption.title}}</option>
+            <option *ngFor="let featureOption of seeyond.seeyond_features | keys" [value]="featureOption.name"
+              [selected]="featureOption.name==this.seeyond.seeyond_feature_type">{{featureOption.title}}</option>
           </select>
         </span>
       </div>
@@ -55,8 +56,8 @@
         <div class="inputs">
           <div class="input">
             <div class="sub-header">Width</div>
-            <input [(ngModel)]="seeyond.width" #widthInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)" required type="number"
-              class="unit-input" placeholder="Width" name="width">
+            <input [(ngModel)]="seeyond.width" #widthInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)"
+              required type="number" class="unit-input" placeholder="Width" name="width">
             <div class="max-min">
               <span>Min {{this.seeyond.widthMin}}</span>
               <span>Max {{this.seeyond.widthMax}}</span>
@@ -65,8 +66,8 @@
           <div class="input">
             <div class="sub-header" *ngIf="seeyond.seeyond_feature_type !== 'ceiling'">Height</div>
             <div class="sub-header" *ngIf="seeyond.seeyond_feature_type === 'ceiling'">Length</div>
-            <input [(ngModel)]="seeyond.height" #lengthInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)" required type="number"
-              class="unit-input" placeholder="Height" name="length">
+            <input [(ngModel)]="seeyond.height" #lengthInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)"
+              required type="number" class="unit-input" placeholder="Height" name="length">
             <div class="max-min">
               <span>Min {{this.seeyond.heightMin}}</span>
               <span>Max {{this.seeyond.heightMax}}</span>
@@ -74,8 +75,9 @@
           </div>
           <div class="input" *ngIf="seeyond.seeyond_feature_type === 'wall-to-ceiling'">
             <div class="sub-header">Ceiling Length</div>
-            <input [(ngModel)]="seeyond.ceiling_length" #ceilingLengthInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)"
-              required type="number" class="unit-input" placeholder="Height" name="length">
+            <input [(ngModel)]="seeyond.ceiling_length" #ceilingLengthInput="ngModel"
+              (change)="seeyondDimensionsDidChange($event.key)" required type="number" class="unit-input"
+              placeholder="Height" name="length">
             <div class="max-min">
               <span>Min {{this.seeyond.ceilLengthMin}}</span>
               <span>Max {{this.seeyond.ceilLengthMax}}</span>
@@ -83,8 +85,8 @@
           </div>
           <div class="input" *ngIf="seeyond.seeyond_feature_type === 'curved-partition'">
             <div class="sub-header">Radius</div>
-            <input [(ngModel)]="seeyond.radius" #radiusInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)" type="number"
-              class="unit-input" placeholder="Height" name="length">
+            <input [(ngModel)]="seeyond.radius" #radiusInput="ngModel" (change)="seeyondDimensionsDidChange($event.key)"
+              type="number" class="unit-input" placeholder="Height" name="length">
             <div class="max-min">
               <span>Min {{this.seeyond.radiusMin}}</span>
               <span>Max {{this.seeyond.radiusMax}}</span>
@@ -97,7 +99,8 @@
             </mat-button-toggle-group> -->
             <span class="toggle-btns units-input">
               <button (click)="updateGridUnits('inches')" [class.selected]="feature.units === 'inches'">IN</button>
-              <button (click)="updateGridUnits('centimeters')" [class.selected]="feature.units === 'centimeters'">CM</button>
+              <button (click)="updateGridUnits('centimeters')"
+                [class.selected]="feature.units === 'centimeters'">CM</button>
             </span>
           </div>
         </div>
@@ -105,7 +108,8 @@
 
       <div *ngIf="showDimensions" id="dimensions" class="left-section">
         <div class="subtitle">Dimensions</div>
-        <div class="description" *ngIf="feature.feature_type==='tetria'">A 15/16 or 9/16 grid system is required for this product.</div>
+        <div class="description" *ngIf="feature.feature_type==='tetria'">A 15/16 or 9/16 grid system is required for
+          this product.</div>
         <div class="inputs">
           <div class="input">
             <div class="sub-header">Width</div>
@@ -125,7 +129,8 @@
             </mat-button-toggle-group> -->
             <span class="toggle-btns units-input">
               <button (click)="updateGridUnits('inches')" [class.selected]="feature.units === 'inches'">IN</button>
-              <button (click)="updateGridUnits('centimeters')" [class.selected]="feature.units === 'centimeters'">CM</button>
+              <button (click)="updateGridUnits('centimeters')"
+                [class.selected]="feature.units === 'centimeters'">CM</button>
             </span>
           </div>
         </div>
@@ -137,7 +142,8 @@
           <div class="input">
             <div class="sub-header">Ceiling Grid Type</div>
             <span appStyledSelect [width]="280">
-              <select (change)="clarioGridSizeChanged($event.target.value)" id="gridOptions" [(ngModel)]="feature.grid_type">
+              <select (change)="clarioGridSizeChanged($event.target.value)" id="gridOptions"
+                [(ngModel)]="feature.grid_type">
                 <option [value]="'15/16'">15/16" (24mm)</option>
                 <option [value]="'9/16'">9/16"</option>
               </select>
@@ -147,8 +153,10 @@
             <div class="sub-header">Tile Size</div>
             <span appStyledSelect [width]="280">
               <select (change)="clarioTileSizeChanged($event.target.value)" id="gridOptions">
-                <option disabled [value]="undefined" [selected]="clarioGrids.selectedTileSize === undefined">-- select --</option>
-                <option *ngFor="let gridOption of clarioGrids.tileSizeOptions | keys" [value]="gridOption.name" [selected]="clarioGrids.selectedTileSize?.name === gridOption.name">{{gridOption.name}}</option>
+                <option disabled [value]="undefined" [selected]="clarioGrids.selectedTileSize === undefined">-- select
+                  --</option>
+                <option *ngFor="let gridOption of clarioGrids.tileSizeOptions | keys" [value]="gridOption.name"
+                  [selected]="clarioGrids.selectedTileSize?.name === gridOption.name">{{gridOption.name}}</option>
               </select>
             </span>
           </div>
@@ -175,7 +183,8 @@
   </div>
   <div class="options-footer">
     <span appStyledButton='primary-right'>
-      <button type="submit" (click)='startDesigning()' class="start-designing" [disabled]="!validateOptions()">Start designing</button>
+      <button type="submit" (click)='startDesigning()' class="start-designing" [disabled]="!validateOptions()">Start
+        designing</button>
     </span>
     <span appStyledButton='secondary-left' *ngIf="showQuantityBtn">
       <button (click)="goToQty()" class="go-to-quantity">Order by quantity</button>
