--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -23,8 +23,9 @@
           <span *ngIf="feature.feature_type !== 'seeyond'" class="three-d" appStyledButton='secondary-left'>
             <button (click)="feature.view3d()" [disabled]="(!feature.tiles)">3D View</button>
           </span>
-          <span *ngIf="feature.feature_type === 'seeyond'" class="download-img" appStyledButton='secondary-left-rotate90'>
-            <button (click)="feature.view3d()">Download Image</button>
+          <span *ngIf="feature.feature_type === 'seeyond'" class="download-img"
+            appStyledButton='secondary-left-rotate90'>
+            <button (click)="this.seeyond.downloadImages()">Download Image</button>
           </span>
         </span>
       </div>
