--- a/src/app/quantity/quantity.component.scss
+++ b/src/app/quantity/quantity.component.scss
@@ -175,7 +175,7 @@ mat-header-cell:last-child {
 .material-column img,
 .material-column div {
   margin: 5px 10px 5px 0px;
-  // max-height: 48px;
+  height: 64px;
 }
 
 .edit-column span img {
