--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -76,7 +76,7 @@
   </div>
   <div class="bottom-section">
     <div class="left-side">
-      <div class="details-header">WHAT DOES THIS LOOK LIKE?</div>
+      <!-- <div class="details-header">TODO: WHAT DOES THIS LOOK LIKE?</div>  -->
     </div>
     <div class="right-side">
       <div class="details-header">Design</div>
