--- a/src/app/design/design.component.html
+++ b/src/app/design/design.component.html
@@ -70,7 +70,7 @@
             <span class="total">{{feature.discount_terms_string}}</span>
           </div>
           <div class="total-row">
-            <span class="sub-header">Discount ammount:</span>
+            <span class="sub-header">Discount amount:</span>
             <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
           </div>
           <hr>
@@ -79,7 +79,7 @@
             <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
           </div>
         </span>
-        <span class="est-totals" *ngIf="seeyond.feature_type === 'seeyond'" >
+        <span class="est-totals" *ngIf="feature.feature_type === 'seeyond'" >
           <div class="total-row">
             <span class="sub-header">List:</span>
             <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
@@ -89,7 +89,7 @@
             <span class="total">{{seeyond.discount_terms_string}}</span>
           </div>
           <div class="total-row">
-            <span class="sub-header">Discount ammount:</span>
+            <span class="sub-header">Discount amount:</span>
             <span class="total">{{seeyond.discount_amount | currency:'USD'}}</span>
           </div>
           <hr>
