--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -38,12 +38,27 @@
           </div>
         </div>
         <div class="bottom-row">
-          <div class="left">
-            <div>Est. Total</div>
-            <div class="details-header">{{feature.estimated_amount | currency:'USD'}}</div>
+          <div class="details-header">Est. Total</div>
+          <div id="estimated-totals" class="info-section">
+            <div class="info-line">
+              <span>List:</span>
+              <span  class="total">{{feature.list_price | currency:'USD'}}</span>
+            </div>
+            <div class="info-line">
+              <span>Discount:</span>
+              <span class="total">{{feature.discount_terms_string}}</span>
+            </div>
+            <div class="info-line">
+              <span>Discount amount:</span>
+              <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
+            </div>
+            <hr>
+            <div class="info-line net">
+              <span class="details-header">Net (USD):</span>
+              <span class="total details-header">{{feature.estimated_amount | currency:'USD'}}</span>
+            </div>
             <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
-          <div class="right"></div>
         </div>
       </div>
       <div class="divider"></div>
@@ -84,5 +99,6 @@
     </div>
   </div>
   <div class="logo-footer">
-    <img src="//3form.s3.amazonaws.com/images/navigation/3form_logo.svg" alt="3form"></div>
+    <img src="//3form.s3.amazonaws.com/images/navigation/3form_logo.svg" alt="3form">
+  </div>
 </div>
