--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -163,10 +163,29 @@
           <span appStyledButton='primary-right' *ngIf="feature.quoted">
             <button (click)="viewDetails()">View Details</button>
           </span>
-          <span class="est-total-text">
+          <span class="est-totals" *ngIf="feature.feature_type !== 'seeyond'" >
+              <div class="total-row">
+                <span class="sub-header">List:</span>
+                <span  class="total">{{feature.list_price | currency:'USD'}}</span>
+              </div>
+              <div class="total-row">
+                <span class="sub-header">Discount:</span>
+                <span class="total">{{feature.discount_terms_string}}</span>
+              </div>
+              <div class="total-row">
+                <span class="sub-header">Discount amount:</span>
+                <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
+              </div>
+              <hr>
+              <div class="total-row">
+                <span class="sub-header">Net (USD):</span>
+                <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
+              </div>
+            </span>
+          <!-- <span class="est-total-text">
             <span>Est. Total:</span>
             <span>{{feature.estimated_amount | currency:'USD'}} USD</span>
-          </span>
+          </span> -->
         </div>
       </div>
     </div>
