--- a/src/app/quote-dialog/quote-dialog.component.html
+++ b/src/app/quote-dialog/quote-dialog.component.html
@@ -60,7 +60,7 @@
               <input type="number" [(ngModel)]="requestedQuantity" (change)="multiplesChanged()">
             </span>
           </div>
-          <div id="estimated-totals" class="info-section">
+          <div *ngIf="feature.feature_type !=='seeyond'" id="estimated-totals" class="info-section">
             <div class="info-line">
               <span class="sub-header">List:</span>
               <span  class="total">{{feature.list_price | currency:'USD'}}</span>
@@ -70,13 +70,33 @@
               <span class="total">{{feature.discount_terms_string}}</span>
             </div>
             <div class="info-line">
-              <span class="sub-header">Discount ammount:</span>
+              <span class="sub-header">Discount amount:</span>
               <span class="total">{{feature.discount_amount | currency:'USD'}}</span>
             </div>
             <hr>
             <div class="info-line">
               <span class="sub-header">Net (USD):</span>
               <span class="total">{{feature.estimated_amount | currency:'USD'}}</span>
+            </div>
+            <div class="description-text">Taxes, shipping & handling not included</div>
+          </div>
+          <div *ngIf="feature.feature_type ==='seeyond'" id="estimated-totals" class="info-section">
+            <div class="info-line">
+              <span class="sub-header">List:</span>
+              <span  class="total">{{seeyond.list_price | currency:'USD'}}</span>
+            </div>
+            <div class="info-line">
+              <span class="sub-header">Discount:</span>
+              <span class="total">{{seeyond.discount_terms_string}}</span>
+            </div>
+            <div class="info-line">
+              <span class="sub-header">Discount amount:</span>
+              <span class="total">{{seeyond.discount_amount | currency:'USD'}}</span>
+            </div>
+            <hr>
+            <div class="info-line">
+              <span class="sub-header">Net (USD):</span>
+              <span class="total">{{seeyond.estimated_amount | currency:'USD'}}</span>
             </div>
             <div class="description-text">Taxes, shipping & handling not included</div>
           </div>
