details page navigation adjustments

--- a/src/app/details/seeyond-details/seeyond-details.component.html
+++ b/src/app/details/seeyond-details/seeyond-details.component.html
@@ -7,10 +7,7 @@
           <span>{{design.design_name}}</span>
         </span>
         <span class="header-navigation">
-          <span id="print-icon" (click)="print()" class="icomoon-print orange">
-            <!-- TODO: REPLACE THIS WITH A PRINTER IMAGE FROM MAT -->
-            Print
-          </span>
+          <img src="/assets/icons/printer_icon.png" (click)="print()">
           <span appStyledButton='secondary-left' class="back-to-design">
             <button (click)="backToDesign()" class="go-to-quantity">Back to design</button>
           </span>
