--- a/src/app/details/details.component.scss
+++ b/src/app/details/details.component.scss
@@ -16,6 +16,12 @@
 
       .header-navigation {
         display: flex;
+        align-items: center;
+
+        img {
+          max-height: 20px;
+          margin-right: 25px;
+        }
 
         .back-to-design {
           font-size: 1em;
