--- a/src/app/quantity/quantity-options/quantity-options.component.html
+++ b/src/app/quantity/quantity-options/quantity-options.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="qty-options-container">
     <div id="project-name" class="qty-section">
-      <div class="subtitle">Project name</div>
+      <div class="subtitle">Design name</div>
       <div class="inputs">
         <input type="text" class="name-input square" placeholder="Name" autofocus [(ngModel)]="feature.design_name">
         <a id="load-btn" class="load-btn-fmt" title="load saved designs" (click)="feature.loadDesigns()">
