--- a/src/app/quantity/quantity.component.html
+++ b/src/app/quantity/quantity.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="main">
     <div class="project-name">
-      <p class="sub-header">Project name</p>
+      <p class="sub-header">Design name</p>
       <div class="project-name-input">
         <span class="input-container">
           <input type="text" placeholder="Name" autofocus [(ngModel)]="feature.design_name">
